checkin cd trigger