@@ -1,2 +1,15 @@
 # wuh
 Windows Update Helper - a CLI for interacting with wuapi
+
+WUH is a command line utility for installing windows updates, and interacts directly with the wuapi library.
+
+> usage: wuh.exe [install\|\|show-available\|\|show-updated\|\|help] [options]
+> options:
+> --download
+> --enable-hidden
+> --enable-previews
+> --enable-cumulative
+> --security-only
+
+
+
